--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
                     <div class="input-field col s12 text-in">
                         <textarea id="textin" class="materialize-textarea"></textarea>
                         <label for="textin">Type Text</label>
-                        <a class="waves-effect waves-light btn-small start-process" onclick="return false;" style="float: right">Submit</a>
+                        <a class="waves-effect waves-light btn-small start-process" onclick="return false;" style="float: right">font</a>
                     </div>
                 </div>
             </form>
@@ -119,6 +119,11 @@
 </pre>
         <button data-clipboard-text="" class="result monospace waves-effect waves-light btn-small to-copy">Copy</button>
         <div style="height: 50px;"></div>
+        <h3>Styles:</h3>
+        <h4>line-through</h4>
+        <pre class="result line-through">
+</pre>
+        <button data-clipboard-text="" class="result line-through waves-effect waves-light btn-small to-copy">Copy</button>
     </div>
     <div style="height: 100px;"></div>
     <script src="js/jquery-2.0.2.min.js"></script>
