新增 style: reverse

--- a/index.html
+++ b/index.html
@@ -124,6 +124,10 @@
         <pre class="result line-through">
 </pre>
         <button data-clipboard-text="" class="result line-through waves-effect waves-light btn-small to-copy">Copy</button>
+        <h4>reverse</h4>
+        <pre class="result reverse">
+</pre>
+        <button data-clipboard-text="" class="result reverse waves-effect waves-light btn-small to-copy">Copy</button>
     </div>
     <div style="height: 100px;"></div>
     <script src="js/jquery-2.0.2.min.js"></script>
