--- a/index.html
+++ b/index.html
@@ -128,6 +128,10 @@
         <pre class="result reverse">
 </pre>
         <button data-clipboard-text="" class="result reverse waves-effect waves-light btn-small to-copy">Copy</button>
+        <h4>fake-normal</h4>
+        <pre class="result fake-normal">
+</pre>
+        <button data-clipboard-text="" class="result fake-normal waves-effect waves-light btn-small to-copy">Copy</button>
     </div>
     <div style="height: 100px;"></div>
     <script src="js/jquery-2.0.2.min.js"></script>
