add "mini" style

--- a/index.html
+++ b/index.html
@@ -120,6 +120,10 @@
         <button data-clipboard-text="" class="result monospace waves-effect waves-light btn-small to-copy">Copy</button>
         <div style="height: 50px;"></div>
         <h3>Styles:</h3>
+        <h4>mini</h4>
+        <pre class="result mini">
+</pre>
+        <button data-clipboard-text="" class="result fake-normal waves-effect waves-light btn-small to-copy">Copy</button>
         <h4>line-through</h4>
         <pre class="result line-through">
 </pre>
