--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
         <h4>mini</h4>
         <pre class="result mini">
 </pre>
-        <button data-clipboard-text="" class="result fake-normal waves-effect waves-light btn-small to-copy">Copy</button>
+        <button data-clipboard-text="" class="result mini waves-effect waves-light btn-small to-copy">Copy</button>
         <h4>line-through</h4>
         <pre class="result line-through">
 </pre>
